--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -199,7 +199,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="updates" class="box">
-			<h2><a title="my RSS feed" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates <small><a title="what is an RSS feed?" href="https://aboutfeeds.com/" target="_blank">[?]</a></small></h2>
+			<h2><a title="my RSS feed" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates <small><a title="what is an RSS feed?" href="/notebook/tutorials/rss/index.html">[?]</a></small></h2>
 			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.com%2Frss.xml&limit=10&showtitle=false&type=js"></script>
 		</div>
 
@@ -433,14 +433,15 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<p><a href="/notebook/links/credit.html#home">credit for materials used!</a> / homepage v3 since 14.dec.23</p>
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
 			on the web since <b>11.apr.23</b> <img src="/!g/pix/catroll.gif" alt="">
-			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a> <img src="!g/pix/catsurprised.gif"> <a href="rss.xml">RSS feed</a></p>
+			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a> <img src="!g/pix/catsurprised.gif"></p>
 		<p>
-			<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
+			<a href="https://decolonizepalestine.com/" target="_blank"><img src="/collection/internet-graphics/!g/palestine.gif" alt="free palestine button"></a>
 			<img src="/collection/internet-graphics/!g/best%20viewed.jpg">
 			<img src="/collection/internet-graphics/!g/nop.gif">
 			<img src="/collection/internet-graphics/!g/dontfeedai.gif">
 			<img src="/collection/internet-graphics/!g/antinft.png">
 			<a href="https://yesterweb.org/no-to-web3/" style="background:transparent"><img src="/collection/internet-graphics/!g/yesterweb-saynotoweb3.gif"></a>
+			<a href="http://validator.w3.org/feed/check.cgi?url=https%3A//doqmeat.com/rss.xml" target="_blank"><img src="/notebook/tutorials/rss/valid.png" alt="[Valid RSS]" title="Validate my RSS feed"></a>
 		</p>
 	</footer>
 
