--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -80,7 +80,8 @@
 
 		<p>while the neocities activity feed sort of gets the job done at keeping you updated with other sites, there are other ways of getting updates from websites right to your doorstep. with this method, you can also see updates from sites that have their profiles disabled, or aren't <b>hosted</b> into neocities!</p>
 		<p>from the <b>perspective of a webmaster</b>, an <mark>RSS feed</mark> is also way more customizable and reliable than whatever the neocities activity feed decides to show on your profile. this is also a great way of keeping up to date with sites without feeling obligated to check the neocities activity feed on a daily basis.</p>
-		<p><mark>RSS feeds</mark> are also called <mark>web feeds</mark>. these are usually files such as .rss .xml .atom and there's probably more that i either forgot or haven't personally seen used. you can read more about them <a href="https://en.wikipedia.org/wiki/RSS" target="_blank" class="outlink">here</a>. </p>
+		<p><mark>RSS feeds</mark> are also called <mark>web feeds</mark>. these are usually files such as .rss .xml .atom and there's probably more that i either forgot or haven't personally seen used.</p>
+		<p>here are some sites that provide more info on RSS feeds: <a href="https://aboutfeeds.com/" target="_blank" class="outlink">aboutfeeds.com</a>, <a href="https://en.wikipedia.org/wiki/RSS" target="_blank" class="outlink">wikipedia</a></p>
 		<p><mark>in this guide i'll be showing you how you can see RSS feeds from <i>other</i> sites and how to set up your own for your site</mark>! </p>
 		<p><u>note</u>: this stuff is super easy to set up with some google searches and looking at other peoples' RSS feeds. you probably do not need this guide, but i still went out of my way to write all of this to show you how this works and how easy it is to set up alongside some tips.</p>
 
@@ -141,7 +142,7 @@
 			<li>&lt;img src=&quot;IMG-URL&quot;&gt; = <xmp>&lt;img src=&quot;IMG-URL&quot;&gt;</xmp>
 			</li>
 		</ul>
-		<p>i know. nasty. but at least whatever you put in there will appear like it would in HTML on a RSS reader or <a href="#rss">widget</a>.</p>
+		<p>i know. nasty. but i do have good news: you don't have to do all of this manually! you can run your what you want to write through an <a href="https://mothereff.in/html-entities" target="_blank" class="outlink">HTML entity encoder</a> and it will do the job. that way whatever you put in there will appear like it would in HTML on a RSS reader or <a href="#rss">widget</a>.</p>
 		<figure>
 			<img src="reader-1.jpg" alt="screenshot from an RSS reader. different items have a link and a image" width="100%">
 			<figcaption>screenshot from my RSS reading using the above codes for a link and a img respectively.</figcaption>
@@ -200,7 +201,7 @@
 		<h2 id="end">conclusion</h2>
 		<p>i think RSS feeds are nice and i want more people to use them. i hope you learned something from this! if this inspired you to make an RSS feed then YAY! if this did not inspired you to make one, then that it also okay, but at least i tried.</p>
 		<hr>
-		<p class="date">last updated on 12.jul.24 / <a href="#">go to the top?</a></p>
+		<p class="date">published on 12.jul.24 / last updated on 13.jul.24 / <a href="#">go to the top?</a></p>
 	</main>
 </body>
 
