minor changes to index

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -13,11 +13,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>☆ doqmeat's website ☆</title>
 	<meta name="description" content="des' personal website">
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link href="favicon.gif" rel="icon" type="image/x-icon">
 	<!--	CSS -->
-	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
-	<link href="!f/homepage-v3/body.css" rel="stylesheet" type="text/css" media="all">
-	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
+	<link href="rss.xml" rel="alternate" type="application/rss+xml" title="doqmeat RSS feed">
+	<link href="fonts/stylesheet.css" rel="stylesheet" type="text/css">
+	<link href="!f/homepage-v3/body.css" rel="stylesheet" type="text/css">
+	<link href="!f/snowflakes.css" rel="stylesheet" type="text/css">
 	<link class="theme" href="/!f/homepage-v3/flower.css" rel="stylesheet" type="text/css">
 	<!--	JS for webrings-->
 	<script src="https://eggring.neocities.org/js/hatring.js"></script>
@@ -122,9 +123,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<h3>personal</h3>
 			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
-			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal <img src="/!g/pix/new1.gif"></a>
+			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal <img src="/!g/pix/new1.gif" alt="new"></a>
 			<a href="/microblog"><img src="/!g/pix/catidea.gif" alt=""> microblog </a>
-			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog <img src="/!g/pix/updated1.gif" alt=""></a>
+			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog <img src="/!g/pix/updated1.gif" alt="updated"></a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook</a>
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
@@ -133,24 +134,24 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> video games</a>
 			<a href="/tv"><img src="!g/pix/tv1.gif" alt=""> shows</a>
-			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt=""></a>
-			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movies</a>
+			<a title="WIP" href="/books"><img src="/!g/pix/book3.gif" alt=""> books <img src="!g/pix/caution1.gif" alt="caution symbol"></a>
+			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif" alt=""> october movies</a>
 			<h3>misc</h3>
 			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
-			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
+			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif" alt=""> masaaki yuasa watchlist</a>
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
 			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif" alt=""> webgarden</a>
 
 			<h3>sitely</h3>
-			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
-			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif"> notebook</a>
-			<a href="/guestbook"><img src="/!g/pix/bear-inside-mail.gif"> guestbook</a>
-			<button title="chatbox will open in a tiny window!" onclick="chat()" class="no"><img src="/!g/pix/msgbbl.gif"> chatbox</button>
-			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
+			<a href="/sites"><img src="/!g/pix/favcharas.gif" alt=""> button wall</a>
+			<a title="contains links, resources, F2U stuff, archives, etc!" href="/notebook"><img src="/!g/pix/notebook.gif" alt=""> notebook</a>
+			<a href="/guestbook"><img src="/!g/pix/bear-inside-mail.gif" alt=""> guestbook</a>
+			<button title="chatbox will open in a tiny window!" onclick="chat()" class="no"><img src="/!g/pix/msgbbl.gif" alt=""> chatbox</button>
+			<a href="/sitemap"><img src="/!g/pix/world.gif" alt=""> sitemap</a>
 
 			<h3>offsite</h3>
-			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities profile</a>
-			<a title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> source code</a>
+			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif" alt=""> neocities profile</a>
+			<a title="github repository" href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink"><img src="/!g/pix/puter.gif" alt=""> source code</a>
 			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> e-mail</a>
 		</nav>
 
@@ -199,7 +200,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		</div>
 
 		<div id="updates" class="box">
-			<h2><a title="my RSS feed" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button for xml file"></a> updates <small><a title="what is an RSS feed?" href="/notebook/tutorials/rss/index.html">[?]</a></small></h2>
+			<h2><a title="my RSS feed" href="rss.xml"><img class="rss" width="15px" src="!g/web/materials/rss-icon.png" alt="RSS button"></a> updates <small><a title="what is an RSS feed?" href="/notebook/tutorials/rss/index.html">[?]</a></small></h2>
 			<script src="//rss.bloople.net/?url=https%3A%2F%2Fdoqmeat.com%2Frss.xml&limit=10&showtitle=false&type=js"></script>
 		</div>
 
@@ -417,7 +418,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<img id="sticker27" class="deco" alt="">
 		<img id="sticker28" class="deco" alt="">
 		<img id="fixed-1" alt="">
-		<img onclick="mizu()" id="mizu" class="deco" alt="">
+		<img onclick="mizu()" id="mizu" class="deco" alt="popup for mizu shrine">
 		<!--		wrapper end div-->
 	</div>
 
