--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -169,9 +169,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<h4>notes:</h4>
 			<li>website does not contain any <u>explicit</u> content but it is made by an adult with an adult audience in mind.</li>
-			<li>some pages are heavy on graphics / IMGS and might require you to reload more than once. all IMGS on my site are optimized so load times are a bit better.</li>
-			<li>recommended to view on <u title="should not break on other browsers... but if it does lmk">firefox</u> with a 1400px+ wide screen <i>but</i> i try my best to make pages responsive to your screen size, browsers, and mobile devices :)</li>
-			<li>site uses <b>javascript</b> and <b>iframes</b></li>
+			<li>some pages are heavy on graphics / IMGS and might require you to reload more than once. all IMGS on my site are compressed so load times are a bit better.</li>
+			<li>recommended to view on <u>firefox</u> with a 1400px+ wide screen <i>but</i> i will try my best to make pages responsive to different screen sizes and browsers :)</li>
+			<li>site uses <b>javascript</b> and <b>iframes</b> that are necessary for navigation and other fun stuff.</li>
 		</div>
 
 		<div id="status" class="box;">
