--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -53,6 +53,7 @@
 		<h2>personal favs</h2>
 		<li><a href="https://htmlcheatsheet.com" target="_blank">HTML cheat sheet</a> - SUPER useful and they also have cheatsheets for css and js!</li>
 		<li><a href="https://learntheweb.courses/topics/html-semantics-cheat-sheet/" target="_blank">HTML semantics</a></li>
+		<li><a href="https://www.w3schools.com/cssref/css_selectors.php" target="_blank">CSS selectors</a></li>
 		<li><a href="http://www.catipsum.com/index.php" target="_blank">catipsum</a> - lorem ipsum but cats</li>
 		<li><a href="https://generator.lorem-ipsum.info/" target="_blank">generator.lorem-ipsum</a> - lorem ipsum in other scripts! mostly use it for japanese and korean</li>
 		<li><a href="https://catbox.moe" target="_blank">catbox.moe</a> - file sharing site</li>
@@ -335,6 +336,7 @@
 		<li><a href="https://discord-timestamp-generator.vercel.app/" target="_blank">discord timestamp generator</a></li>
 		<li><a href="https://webmention.io/" target="_blank">webmention.io</a></li>
 		<li><a href="https://tld-list.com/" target="_blank">tld-list</a> - compare domain prices</li>
+		<li><a href="https://missing.csail.mit.edu/" target="_blank">the missing semester of your CS education</a> - a series of lectures about rarely covered topics in computer science classes such as proficency with the tools you'll be using.</li>
 
 		<h3 id="add-on">firefox add-ons</h3>
 		<li><a href="https://addons.mozilla.org/en-US/firefox/addon/activate-reader-view/" target="_blank">force reader view</a></li>
