made my very first pixel for a cliquegit statusgit status

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -211,60 +211,62 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
-			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
-			<a href="https://theatregirl.net/cats/" target="_blank"><img src="!g/web/fanlisting-cliques/cats.png" alt="cats"></a>
+			<a title="kitty friends pixel club" href="https://divergentrays.com/kitty" target="_blank"><img src="!g/web/cliques/kitty-friends/doqmeat.png" alt="the mc cat plush but in kitty pixel"></a>
+			<br>
+			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
+			<a href="https://theatregirl.net/cats/" target="_blank"><img src="!g/web/fanlisting/cats.png" alt="cats"></a>
 
-			<a href="https://movieloverfls.org/3ds/index.php" target="_blank"><img src="!g/web/fanlisting-cliques/3ds.jpg" alt="3ds"></a>
+			<a href="https://movieloverfls.org/3ds/index.php" target="_blank"><img src="!g/web/fanlisting/3ds.jpg" alt="3ds"></a>
 
-			<a href="https://puppyluv-listings.neocities.org/enhypen/" target="_blank"><img src="!g/web/fanlisting-cliques/enhypen.png" alt="enhypen"></a>
+			<a href="https://puppyluv-listings.neocities.org/enhypen/" target="_blank"><img src="!g/web/fanlisting/enhypen.png" alt="enhypen"></a>
 
-			<a href="https://fan.cocorichelle.com/nekoatsume/index.php" target="_blank"><img src="!g/web/fanlisting-cliques/neko.png" alt="neko atsume"></a>
+			<a href="https://fan.cocorichelle.com/nekoatsume/index.php" target="_blank"><img src="!g/web/fanlisting/neko.png" alt="neko atsume"></a>
 
-			<a href="https://fans.thislove.nu/star/" target="_blank"><img src="!g/web/fanlisting-cliques/stargazing.gif" alt="stargazing"></a>
+			<a href="https://fans.thislove.nu/star/" target="_blank"><img src="!g/web/fanlisting/stargazing.gif" alt="stargazing"></a>
 
-			<a href="http://fan.after-death.org/magica" target="_blank"><img src="!g/web/fanlisting-cliques/madoka.png" alt="madoka fanlisting"></a>
+			<a href="http://fan.after-death.org/magica" target="_blank"><img src="!g/web/fanlisting/madoka.png" alt="madoka fanlisting"></a>
 
-			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting-cliques/siinamota-small.png" alt="siinamota fanlisting"></a>
+			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-small.png" alt="siinamota fanlisting"></a>
 
-			<a href="https://www.marheavenj.net/power" target="_blank"><img src="!g/web/fanlisting-cliques/power.jpg" alt="power fanlisting"></a>
+			<a href="https://www.marheavenj.net/power" target="_blank"><img src="!g/web/fanlisting/power.jpg" alt="power fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_14.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting/loona50x50_14.png" alt="loona fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_0.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting/loona50x50_0.png" alt="loona fanlisting"></a>
 
-			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_8.png" alt="loona fanlisting"></a>
+			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting/loona50x50_8.png" alt="loona fanlisting"></a>
 
-			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img src="/!g/web/fanlisting-cliques/flowers.gif" alt="flowers fanlisting"></a>
+			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img src="/!g/web/fanlisting/flowers.gif" alt="flowers fanlisting"></a>
 
-			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img src="/!g/web/fanlisting-cliques/blackcats.png"></a>
+			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img src="/!g/web/fanlisting/blackcats.png"></a>
 
-			<a href="http://fan.warmer-climate.net/mushrooms/" target="_blank"><img src="/!g/web/fanlisting-cliques/mush50x50.png"></a>
+			<a href="http://fan.warmer-climate.net/mushrooms/" target="_blank"><img src="/!g/web/fanlisting/mush50x50.png"></a>
 
-			<a href="http://fan.winterlantern.net/bloodborne/index.php" target="_blank"><img src="/!g/web/fanlisting-cliques/bloodborne_50x50_4.png"></a>
+			<a href="http://fan.winterlantern.net/bloodborne/index.php" target="_blank"><img src="/!g/web/fanlisting/bloodborne_50x50_4.png"></a>
 
-			<a href="https://fan.redcrown.net/fallout/" target="_blank"><img src="/!g/web/fanlisting-cliques/fallout.png"></a>
+			<a href="https://fan.redcrown.net/fallout/" target="_blank"><img src="/!g/web/fanlisting/fallout.png"></a>
 
-			<a href="http://fan.warmer-climate.net/portal2/" target="_blank"><img src="/!g/web/fanlisting-cliques/portal2.png"></a>
+			<a href="http://fan.warmer-climate.net/portal2/" target="_blank"><img src="/!g/web/fanlisting/portal2.png"></a>
 
-			<a href="https://hellokitty.i-heart-you.net" target="_blank"><img src="/!g/web/fanlisting-cliques/hellokitty50x50_05.gif"></a>
+			<a href="https://hellokitty.i-heart-you.net" target="_blank"><img src="/!g/web/fanlisting/hellokitty50x50_05.gif"></a>
 
-			<a href="http://hellokitty.ravenbeauty.net/chococat" target="_blank"><img src="/!g/web/fanlisting-cliques/chococat50x50_1.png" alt="chococat fanlisting"></a>
+			<a href="http://hellokitty.ravenbeauty.net/chococat" target="_blank"><img src="/!g/web/fanlisting/chococat50x50_1.png" alt="chococat fanlisting"></a>
 
 			<br>
-			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting-cliques/88x31kuromi.png" alt="cafe rose banner"></a>
+			<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="/!g/web/fanlisting/88x31kuromi.png" alt="cafe rose banner"></a>
 
 			<br>
-			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting-cliques/nso.png" alt="needy streamer overdose fanlisting" style="max-width:100%"></a>
+			<a href="https://mizuki.world/nso/" target="_blank"><img src="/!g/web/fanlisting/nso.png" alt="needy streamer overdose fanlisting" style="max-width:100%"></a>
 
 			<br>
-			<a href="https://dust.kuchiki.net/" target="_blank"><img src="/!g/web/fanlisting-cliques/cats.gif"></a>
+			<a href="https://dust.kuchiki.net/" target="_blank"><img src="/!g/web/fanlisting/cats.gif"></a>
 			<br>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-space.gif" alt="appledust space mini-clique"></a>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
-			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting-cliques/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting/lejlart-space.gif" alt="appledust space mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting/lejlart-pastelcolors.gif" alt="appledust pastel colors mini-clique"></a>
+			<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="/!g/web/fanlisting/lejlart-clouds.gif" alt="appledust clouds mini-clique"></a>
 
 			<br>
-			<img src="/!g/web/fanlisting-cliques/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> <span style="font-size:15px">i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black cat</a></span>
+			<img src="/!g/web/fanlisting/cat-moudoku.png" width="20px" alt="pixel art of a grey cat"> <span style="font-size:15px">i am a <a href="https://cliques.moudoku.com/cats" target="_blank">black cat</a></span>
 
 		</div>
 
