--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -211,7 +211,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="listing" class="box">
 			<h2>fanlistings &amp; cliques</h2>
-			<a title="kitty friends pixel club" href="https://divergentrays.com/kitty" target="_blank"><img src="!g/web/cliques/kitty-friends/doqmeat.png" alt="the mc cat plush but in kitty pixel"></a>
+			<img title="by me! - based on the minecraft cat plushie" src="!g/web/cliques/kitty-friends/doqmeat.png" alt="the mc cat plush but in kitty pixel">
+			<a title="kitty friends pixel club" href="https://divergentrays.com/kitty" target="_blank"><img src="!g/web/cliques/kitty-friends/button.gif" alt="kitty friends button"></a>
 			<br>
 			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
 			<a href="https://theatregirl.net/cats/" target="_blank"><img src="!g/web/fanlisting/cats.png" alt="cats"></a>
