--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -191,12 +191,12 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> yoshi's woolly world, <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a></p>
+			<p><span class="hl">playing:</span> <a href="vgs/fallout-new-vegas/index.html">fallout new vegas</a>, <a href="/vgs/style-savvy-trendsetters/index.html">style savvy: trendsetter</a>, cooking mama</p>
 			<p><span class="hl">reading:</span> <i>chainsaw man</i> by tatsuki fujimoto</p>
 			<p><span class="hl">watching:</span> nothing ATM</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> having a nice summer break!</p>
-			<p class="date">last updated on 30.jun.24</p>
+			<p class="date">last updated on 14.jul.24</p>
 		</div>
 
 		<div id="updates" class="box">
