--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>fallout new vegas</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="/vgs/favicon.gif">
 	<link href="/vgs/body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
@@ -35,9 +35,22 @@
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
 		<h3>logs</h3>
+		<p><span class="date">14.jul.24</span> been a while since i played this! did a little bit of stuff here and there. turned that robot into a sheriff for primm <img src="/!g/pix/emote2thumbup.gif" alt="thumbs up"> also met my first companion (of this playthrough) cass! she's pretty funny.</p>
+		<details>
+			<summary>some notes for myself:</summary>
+			<ul>
+				<li>check back on nipton when lockpick leveled up at 50</li>
+				<li>go back to primm and talk to the ncr outpost there. tell them about the sick robot who's a sheriff now.</li>
+			</ul>
+		</details>
+		<center>
+			<img width="100%" src="240713%20(3).jpg" alt="screenshots from new vegas">
+			<img width="100%" src="240713%20(2).jpg" alt="screenshots from new vegas">
+		</center>
+		<hr>
 		<p><span class="date">27.may.24</span> i go north of goodsprings and got my ass beat by cazadores.... i went back and decided to take a selfie with the dog instead.</p>
 		<center><img src="me-n-chey.jpg" width="100%" alt="me and chey"></center>
-<p>after i said goodbye to the dog, i went south and helped out the ppl at primm. i will be turning that robot into a sheriff.</p>
+		<p>after i said goodbye to the dog, i went south and helped out the ppl at primm. i will be turning that robot into a sheriff.</p>
 		<hr>
 		<p><span class="date">24.may.24</span> i think i am pretty much done with goodsprings! got through that fight with the powder gangers <small>(btw i feel like gangers is impossible for me to say irl)</small> and the ppl of goodsprings. helped goodsprings of course because like i don't have have it in me to be evil. and also a dog lives in goodsprings and her name is cheyenne. i remember in my first playthrough of new vegas, when i got into this fight idk What happened but my ass was a bit rusty and the dog fucking died and i felt soooooo bad. i couldn't even reload because it had been a while since i had saved the game <small>(i learned from this one)</small> so she had to stay dead <img src="/!g/pix/catsob.gif"></p>
 		<p><b>until today!</b> i did this quest again, sniped the guys. and the dog? is very much alive. <b>fuck yes.</b></p>
