--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -52,6 +52,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>14.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
 			<li>09.jul.24: added: <a href="cato/index.html">cato: buttered cat</a></li>
 			<li>03.jul.24: log: <a href="style-savvy-trendsetters/index.html">style savvy trendsetters</a></li>
 			<li>19.jun.24: log: <a href="sonic-rush/index.html">sonic rush</a>
