--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -133,6 +133,7 @@
 		<hr>
 		<p><u>note 1</u>: the date of each <code>item</code> is the <code>pubDate</code> aka <i>published date</i>. it has to be formatted as shown in the code or you will get an error. the time of the <code>item</code> <code>pubDate</code> is configured using your timezone. you'll have to check your time zone in order to put the correct value! my time zone is GMT -4 which why you see a <code>-0400</code> in there.</p>
 		<blockquote>example: if you're in eastern standard time, then you can just input <code>Tue, 09 Jul 2024 15:00:00 EST</code> in the <code>pubDate</code>.</blockquote>
+<p><u>edit 1</u>: you can also use this <a href="https://timestampgenerator.com/" target="_blank" class="outlink">time stamp generator</a> to generate your <code>pubDate</code>, just make sure to copy paste the one that says <i>RFC</i></p>
 		<hr>
 		<p><u>note 2</u>: you can display HTML code in your <code>rss.xml</code> but not the way you are probably thinking of.</p>
 		<p>for example: let's say you want to include a link in the <code>description</code> of an <code>item</code>. instead of writing <code>&lt;a href=&quot;URL&quot;&gt;LINK&lt;/a&gt;</code> you instead have to do it with <a href="https://www.w3schools.com/html/html_symbols.asp" target="_blank" class="outlink">HTML entities</a>, like so:</p>
