--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>RSS guide</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="/notebook/favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="../../body.css" rel="stylesheet" type="text/css" media="all">
