--- a/doqmeat/notebook/tutorials/rss/index.html
+++ b/doqmeat/notebook/tutorials/rss/index.html
@@ -84,7 +84,7 @@
 		<p><mark>RSS feeds</mark> are also called <mark>web feeds</mark>. these are usually files such as .rss .xml .atom and there's probably more that i either forgot or haven't personally seen used.</p>
 		<p>here are some sites that provide more info on RSS feeds: <a href="https://aboutfeeds.com/" target="_blank" class="outlink">aboutfeeds.com</a>, <a href="https://en.wikipedia.org/wiki/RSS" target="_blank" class="outlink">wikipedia</a></p>
 		<p><mark>in this guide i'll be showing you how you can see RSS feeds from <i>other</i> sites and how to set up your own for your site</mark>! </p>
-		<p><u>note</u>: this stuff is super easy to set up with some google searches and looking at other peoples' RSS feeds. you probably do not need this guide, but i still went out of my way to write all of this to show you how this works and how easy it is to set up alongside some tips.</p>
+		<p><u>note 1</u>: this stuff is super easy to set up with some google searches and looking at other peoples' RSS feeds. you probably do not need this guide, but i still went out of my way to write all of this to show you how this works and how easy it is to set up alongside some tips. i'd like to see more sites make use of this tbh!</p>
 
 		<h2 id="reader">RSS feed readers</h2>
 		<p>i believe it would be easier to start with how you can <u>view and recieve updates from other sites</u> via an <mark>RSS reader</mark>. but, if you just wanna know how to set up your own, you're free to skip this and go directly to the RSS feed <a href="#setup">setup</a>.</p>
