updated learning js page

--- a/doqmeat/projects/learning-js/index.html
+++ b/doqmeat/projects/learning-js/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet">
-	<link href="/projects/body.css" rel="stylesheet">
+	<link href="../body.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
@@ -29,21 +29,21 @@
 <body>
 	<h1>i'm learning javascript</h1>
 	<main>
-		<p>i'm taking notes as i go through tutorials and read info <img src="/!g/pix/emoteoneourple.gif"></p>
+		<p>i'm taking notes as i go through tutorials and read info <img src="/!g/pix/emoteoneourple.gif"> btw you're free to take anything here for yourself.</p>
 
 		<h2>navigation</h2>
 		<nav>
 			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="smarter-way-js.html">a smarter way to learn JS</a> - taking notes as i read through it.
 			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="freecodecamp-1.html">freecodecamp exercise 1</a> - learn basic JS by building a RPG
-			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="practice.html">practice page</a> where i put what i've learned into practice.
+			<br><img src="/!g/pix/starblue.gif" alt=""> <a href="practice.html">practice page</a> - where i put what i've learned into practice.
 		</nav>
 
 		<h2>JS to-do list</h2>
 		<ul>
-			<li>have different themes on homepage that stay selected on reload</li>
-			<li>how to filter stuff</li>
-			<li>img modal pop up?</li>
-			<li>how to have stuff selected randomly</li>
+			<li>have different themes that stay selected on reload</li>
+			<li>how to filter classes</li>
+			<li><s>img modal pop up?</s></li>
+			<li>how to have stuff loaded randomly</li>
 		</ul>
 	</main>
 
