--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -18,7 +18,7 @@
 	<aside id="power">
 		<img src="!g/power.png" width="100%" alt="power from chainsaw man">
 	</aside>
-	<div id="wrapper">
+	<main>
 		<h1>web projects</h1>
 		<main>
 			<p>(　o=^•ェ•)o　┏━┓ here's some of my stuff that is one the interwebs</p>
@@ -36,14 +36,17 @@
 				</ul>
 			</ul>
 			<h2 style="margin:3px;">misc</h2>
-			<a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS
+			<p>i will also have in here some pages relating to things i'm learning or for reference.</p>
+			<ul>
+				<li><a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS</li>
+			</ul>
 		</main>
 		<footer>
 			<p>....... <a title="go back home" href="/">ᓚᘏᗢ</a> .......</p>
-			<p> &hearts; all made with love by des &hearts; <a href="mailto:doqmeat@gmail.com" target="_blank">contact e-mail</a></p>
+			<p> &hearts; all made with love by des &hearts;</p>
 			<p><b>credit</b>: fonts used: <a href="https://www.dafont.com/bm-neco.font" target="_blank">bm-neko</a>, <a href="https://fonts.google.com/specimen/Gaegu" target="_blank">gaegu</a>, power from fujimoto's <i>chainsaw man</i></p>
 		</footer>
-	</div>
+	</main>
 </body>
 
 </html>
