--- a/doqmeat/projects/learning-js/practice.html
+++ b/doqmeat/projects/learning-js/practice.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet">
-	<link href="/projects/body.css" rel="stylesheet">
+	<link href="../body.css" rel="stylesheet">
 	<link href="box.css" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
@@ -33,6 +33,11 @@
 <body>
 	<h1>practice page</h1>
 	<main>
+
+		<p>figured out how to do a box pop up and a img modal of sorts! i put a class tag on all that imgs where if you click them then i take the <code>src</code> and <code>alt</code> text into the img modal. you can check it out on the scans page of my <a title="currently a WIP!" href="https://siinamota.doqmeat.com/scans/" target="_blank" class="outlink">siinamota fansite</a>. i also use a similar thing for the imgs on my <a href="/microblog">microblog</a> but with a different method.</p>
+		<p>also learning how to use this bit of code with the examples mentioned above <br><code>i = 0; i &lt; example.length; i++</code></p>
+
+		<hr>
 
 		<select>
 			<option selected>what style should the box be???</option>
@@ -139,7 +144,7 @@ function reallyMeow() {
 	</main>
 
 	<footer>
-		last updated: <b>28.apr.24</b>
+		last updated: <b>14.jul.24</b>
 		<br>
 		....... ᓚᘏᗢ .......
 		<br>
