--- a/doqmeat/projects/index.html
+++ b/doqmeat/projects/index.html
@@ -30,6 +30,7 @@
 						<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank">i walk because i was born</a> - a siinamota fanlisting.
 					</li>
 				</ul>
+				<li><a href="/notebook/tutorials/index.html">tutorials and guides</a></li>
 				<li><a href="/notebook/F2U/codes.html">HTML templates</a> - templates for HTML pages i've coded that are free to use. <small>i also have a <b>TON</b> of resources how to get started coding websites on my <a href="https://doqmeat.com/notebook/links#c" target="_blank">site's links</a>!</small></li>
 				<ul>
 					<li><b>notebook</b> - <a href="/notebook/F2U/preview/notebook" target="_blank">live preview</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a></li>
@@ -38,7 +39,8 @@
 			<h2 style="margin:3px;">misc</h2>
 			<p>i will also have in here some pages relating to things i'm learning or for reference.</p>
 			<ul>
-				<li><a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS</li>
+				<li><a href="learning-js/index.html">learning javascript</a> - documenting my process of learning JS.</li>
+				<li><a href="cmd/index.html">cmd reference sheet</a> - when im a little stupid for the git bash manuals so i have to make my own reference sheet.</li>
 			</ul>
 		</main>
 		<footer>
