updated button wall

--- a/doqmeat/sites/index.html
+++ b/doqmeat/sites/index.html
@@ -161,6 +161,7 @@
 			<a href="https://angelscake.neocities.org/" target="_blank"><img src="!g/angelscake.gif" alt="angelscake"></a>
 			<a href="https://sabrin.party" target="_blank"><img src="!g/sabrin.gif" alt="sabrin"></a>
 			<a title="surge - found on 32bit cafe discord server! very cool and i love the photography page" href="http://doubleincision.com/" target="_blank"><img src="!g/versipellis.png"></a>
+			<a title="chocolate-cake" href="https://chocolate-cake.neocities.org" target="_blank"><img src="!g/chocolate-cake.gif" alt="chocolate-cake"></a>
 		</div>
 
 		<a title="2cherrish - one of the coolest websites i've seen in a while!!! i love how interactive it is" href="https://2cherrish.neocities.org/"><img src="!g/2cherish.gif"></a>
