--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -127,6 +127,7 @@
 		<li><a href="https://www.cssportal.com/css-triangle-generator/" target="_blank">CSS triangle generator</a></li>
 		<li><a href="https://www.w3schools.com/cssref/tryit.php?filename=trycss_cursor" target="_blank">W3Schools cursor property</a> - all the cursors you can use with CSS!</li>
 		<li><a href="https://codepen.io/stephenpaton-tech/full/JjRvGmY" target="_blank">custom scrollbar maker</a></li>
+		<li><a href="https://css-tricks.com/" target="_blank">css-tricks.com</a></li>
 
 		<h3 id="html">HTML</h3>
 		<li><a href="https://www.html.am/html-editors/html-text-editor.cfm" target="_blank">www.html.am</a> - html text editor</li>
