--- a/doqmeat/vgs/cato/index.html
+++ b/doqmeat/vgs/cato/index.html
@@ -19,18 +19,30 @@
 
 	<main>
 		<h2>cato: buttered cat</h2>
-		<img width="30%" class="cover" src="cover.jpg">
+		<img width="30%" class="cover" src="cover.jpg" alt="a black and white cat with a butter toast on top of it">
 		<div class="info"><b>release date: </b> TBA</div>
 		<div class="info"><b>developer: </b> Team Woll</div>
 		<div class="info"><b>genre/type: </b>platformer, CAT</div>
-		<div class="info"><b>link: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a></div>
+		<div class="info"><b>link: </b><a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a>, <a href="https://twitter.com/Cato_TeamWoll" target="_blank">twitter</a></div>
 		<h3>logs</h3>
 		<hr>
+		<p><span class="date">15.jul.24</span> wow so i just updated the demo and it's sooo different from i first played it during summer of 2023!</p>
+		<figure> <img src="demo-2%20(2).jpg" width="100%" alt="menu screen">
+			<figcaption>menu screen</figcaption>
+		</figure>
+		<figure> <img src="demo-2%20(1).jpg" width="100%" alt="screenshot of a level. the cat has a toast on top of it with butter spread.">
+			<figcaption>now we actually have a buttered toast!!!!!</figcaption>
+		</figure>
+		<p>from what i saw on their <a href="https://twitter.com/Cato_TeamWoll/status/1793830611725041854" target="_blank" class="outlink">twitter</a>, the latest version of the demo was released on may 23. so it makes sense why it has changed so much. i played like roughly 10 mins of it but i still really enjoyed it!!! you can also make the cat meow with the <b>r</b> button i believe...</p>
+		<hr>
 		<p><span class="date">07.jul.24</span> suddenly remembered that i need to promote this game because i played the demo during july 2023 after seeing it on the 2023 wholesome direct and even made a blog post about the games that caught my attention <a href="/blog/2023/230610-wholesomegames#17" target="_parent">here</a>!</p>
-		<img src="demo-1%20(3).jpg" width="100%">
+		<figure>
+			<img src="demo-1%20(3).jpg" width="100%" alt="landing screen">
+			<figcaption>landing screen</figcaption>
+		</figure>
 		<p>when starting the demo, i had to navigate the menu in chinese but i still managed to find my way into the game. this isn't my first rodeo with a video game clearly <img src="/!g/pix/catsob.gif" alt=""> i'm still not sure where i can change the language or if that was a bug of the demo.... ANYWAYS. i played the demo for a solid 30 mins. and it was <b>so much fun!!!!!!</b> i fell absolutely in love with the mechanics of the player AKA <b>a cat with a butter toast <small>(or jam toast? might have changed recently cus there's something red on my toast when i played the demo...)</small> stuck to them.</b> this is genius. this is innovative. this is what i'm fucking talking about. i also adore the art style they are going for this, it's so adorable.</p>
-		<img src="demo-1%20(1).jpg" width="100%">
-		<img src="demo-1%20(2).jpg" width="100%">
+		<img src="demo-1%20(1).jpg" width="100%" alt="screenshot of levels">
+		<img src="demo-1%20(2).jpg" width="100%" alt="screenshot of levels">
 		<p>some puzzles / levels got me thinking for quite a bit and some of them got really interesting quirks to them! i really hope to see this game released someday! the team seems really small and i don't see much of this game anywhere else which is why i said <small>jokingly</small> that i needed to promote this because i really want to play this some day! so i highly recommend playing the demo on <a href="https://store.steampowered.com/app/1999520/CATO_Buttered_Cat/" target="_blank">steam</a> :]</p>
 		<hr>
 
