new fanlisting, button wall, link

--- a/doqmeat/index.html
+++ b/doqmeat/index.html
@@ -250,6 +250,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a title="kitty friends pixel club" href="https://divergentrays.com/kitty" target="_blank"><img src="!g/web/cliques/kitty-friends/button.gif" alt="kitty friends button"></a>
 			<br>
 			<a href="https://siinamota.doqmeat.com/fanlisting" target="_blank"><img src="!g/web/fanlisting/siinamota-big.png" style="max-width: 100%" alt="siinamota fanlisting"></a>
+			<br>
+			<a href="https://fanlistings.melankorin.net/vocaloid/" target="_blank"><img src="!g/web/fanlisting/vocaloid.png" alt="vocaloid fanlisting"></a>
+
 			<a href="https://theatregirl.net/cats/" target="_blank"><img src="!g/web/fanlisting/cats.png" alt="cats"></a>
 
 			<a href="https://movieloverfls.org/3ds/index.php" target="_blank"><img src="!g/web/fanlisting/3ds.jpg" alt="3ds"></a>
