--- a/doqmeat/notebook/links/index.html
+++ b/doqmeat/notebook/links/index.html
@@ -63,6 +63,7 @@
 		<li><a href="https://www.remove.bg" target="_blank">remove.bg</a> - aka make imgs transparent!</li>
 		<li><a href="https://doodad.dev/dither-me-this/" target="_blank">dither me this</a> and <a href="https://ditherit.com/" target="_blank">ditherit</a> - dither imgs! i use this A LOT. mostly for backgrounds</li>
 		<li><a href="https://www.w3schools.com/colors/colors_picker.asp" target="_blank">w3schools' color picker</a> - shows you the different hues, contrast, and how the color looks as a background with text!</li>
+		<li><a href="https://docs.emmet.io/cheat-sheet/" target="_blank">emmet cheat sheet</a></li>
 
 		<h3>some resource pages bookmarks!</h3>
 		<li><a href="https://faegardens333.neocities.org/resources" target="_blank">faegardens333</a> / <a href="https://hekate.neocities.org" target="_blank">hekate</a> / <a href="https://nekonokuni.neocities.org/links" target="_blank">nekonokuni</a> / <a href="https://sadgrl.online/webmastery/webmaster-links" target="_blank">sadgrl.online</a> </li>
