--- a/doqmeat/notebook/F2U/preview/notebook.html
+++ b/doqmeat/notebook/F2U/preview/notebook.html
@@ -245,7 +245,7 @@ don't take this code for your template cus it might be outdated or missing comme
 			<div id="tab1-p" class="paper left">
 				<div class="left-in">
 					<h1>F2U notebook template</h1>
-					by <a href="/" target="_blank">doqmeat</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen code</a> / <a href="https://github.com/doqmeat/F2U-html-templates/blob/main/notebook.html" target="_blank">github code</a>
+					by <a href="/" target="_blank">doqmeat</a> / <a href="https://codepen.io/doqmeat/pen/PoXjwPy" target="_blank">codepen</a> / <a href="https://github.com/doqmeat/HTML-templates/tree/main/notebook" target="_blank">github</a>
 
 					<p><mark>credit is not required but a link back to my website is very appreciated!</mark></p>
 
