--- a/doqmeat/vgs/fallout-new-vegas/index.html
+++ b/doqmeat/vgs/fallout-new-vegas/index.html
@@ -35,6 +35,13 @@
 		<div class="info"><b>genre/type: </b> shooter, rpg, action </div>
 		<div class="info"><b>status:</b> not finished</div>
 		<h3>logs</h3>
+		<hr>
+		<p><span class="date">16.jul.24</span> this was so embarrassing...</p>
+		<video width="100%" controls>
+			<source src="https://files.catbox.moe/my540z.mp4">
+		</video>
+		<p>i didn't even notice my health and also why is there a DOG behind me? i was so dead here either way...</p>
+		<hr>
 		<p><span class="date">14.jul.24</span> been a while since i played this! did a little bit of stuff here and there. turned that robot into a sheriff for primm <img src="/!g/pix/emote2thumbup.gif" alt="thumbs up"> also met my first companion (of this playthrough) cass! she's pretty funny.</p>
 		<details>
 			<summary>some notes for myself:</summary>
