--- a/doqmeat/vgs/info.html
+++ b/doqmeat/vgs/info.html
@@ -52,6 +52,7 @@
 		<h3>change log</h3>
 
 		<div id="log">
+			<li>16.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
 			<li>15.jul.24: log: <a href="cato/index.html">cato</a></li>
 			<li>14.jul.24: log: <a href="fallout-new-vegas/index.html">new vegas</a></li>
 			<li>09.jul.24: added: <a href="cato/index.html">cato: buttered cat</a></li>
